# TestWork0002

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/common/: enums.py  models.py
backend/domain/: exceptions.py
backend/domain/ioc/: config.py  database.py  providers.py  repositories.py  services.py  session.py
backend/domain/repositories/: task_repo.py  user_repo.py
backend/domain/services/: auth_service.py  password_service.py  task_service.py  token_service.py  user_service.py
backend/infra/: settings.py
backend/infra/database/: connection.py
backend/infra/database/models/: tasks.py  users.py
backend/presentation/common/: factories.py
backend/presentation/models/: filters.py  tasks.py  users.py
backend/presentation/routers/: auth.py  tasks.py  users.py
backend/presentation/web/: main.py
migrations/: env.py
migrations/versions/: 3b7d82e5b24b_create_tasks_table.py  57e06d997a0e_added_default_value.py  8bfed6447c4f_add_name_field.py  d6b587b2ec8d_create_users_table.py
scripts/: entrypoint.sh
tests/: conftest.py  database.py  test_auth.py  test_tasks.py  test_users.py
tests/common/: providers.py
