[tool.poetry]
name = "testwork0002"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
poetry-core = "^2.1.2"
alembic = "^1.15.2"
alembic-postgresql-enum = "^1.7.0"
pydantic-settings = "^2.9.1"
dishka = "^1.5.3"
psycopg2-binary = "^2.9.10"
passlib = "^1.7.4"
asyncpg = "^0.30.0"
greenlet = "^3.2.1"
bcrypt = "^4.0.1"
pyjwt = "^2.10.1"
python-multipart = "^0.0.20"


[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
ruff = "^0.11.7"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
httpx = "^0.28.1"
aiosqlite = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
